exports[`mcfunction argument parser > minecraft:team > Parse \"123\" 1`] = `
{
  "node": {
    "type": "symbol",
    "range": {
      "start": 0,
      "end": 3
    },
    "value": "123"
  },
  "errors": []
}
`;

exports[`mcfunction argument parser > minecraft:team > Parse \"foo\" 1`] = `
{
  "node": {
    "type": "symbol",
    "range": {
      "start": 0,
      "end": 3
    },
    "value": "foo"
  },
  "errors": []
}
`;
